--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,14 +1,26 @@
-.profile__edit-button {
-    outline: none;
-    border: none;
-    background-color: black;
-    background-image: url(../../../Images/Profile__button_edit.svg);
-    width: 24px;
-    height: 24px;
-    grid-area: button;
-    transition: opacity 100ms ease-in-out;
+.profile__edit-button{
+  margin: 0;
+  margin-bottom: 7px;
+  border: 1px solid #FFFFFF;
+  background: none;
+  background-image: url(../../../Images/Profile__button_edit.svg);
+  background-repeat: no-repeat;
+  background-size: 10px;
+  background-position: center;
+  width: 24px;
+  height: 24px;
+  transition: opacity 100ms ease-in-out;
+  align-self: flex-end;
+}
+.profile__edit-button:hover{
+  cursor: pointer;
+  opacity: 0.6;
+}
+@media screen and (max-width: 320px){
+  .profile__edit-button{
+    margin-bottom: 6px;
+    background-size: 7.5px;
+    width: 18px;
+    height: 18px;
   }
-.profile__edit-button:hover {
-    opacity: 0.6;
-    cursor: pointer;
 }
