--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,8 +1,15 @@
 .elements {
-    padding-top: 50px;
+    padding-top: 36px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
     row-gap: 20px;
     column-gap: 17px;
   }
+@media screen and (max-width: 320px){
+  .elements{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+}
