--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,15 @@
 .header {
-    border-bottom: 1px solid #545454;
-    padding-top: 45px;
-    margin: 0 auto;
-    max-width: 884px;
-    min-height: 74px;
+  margin: 0;
+  border-bottom: 1px solid #545454;
+  max-width: 880px;
+  min-height: 74px;
+  padding-top: 45px;
+}
+@media screen and (max-width: 320px) {
+  .header {
+    padding-left: 27px;
+    padding-top: 28px;
+    max-width: 320px;
+    min-height: 56px;
   }
+}
