--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,14 +1,25 @@
-.profile__add-button {
-    outline: none;
-    border: none;
-    background-color: black;
-    background-image: url(../../../Images/Profile__button_add.svg);
-    width: 150px;
-    height: 50px;
-    align-self: center;
-    transition: opacity 100ms ease-in-out;
+.profile__add-button{
+  margin-left: auto;
+  background: none;
+  background-size: 22px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url(../../../Images/Profile__button_add.svg);
+  width: 150px;
+  height: 50px;
+  border: 2px solid #FFFFFF;
+  transition: opacity 100ms ease-in-out;
+}
+.profile__add-button:hover{
+  cursor: pointer;
+  opacity: 0.6;
+}
+@media screen and (max-width:320px){
+  .profile__add-button{
+    margin: auto;
+    width: 282px;
+    margin-top: 33px;
+    background-image: url(../../../Images/Profile__button_add-mobile.svg);
+    background-size: 16px;
   }
-  .profile__add-button:hover {
-    opacity: 0.6;
-    cursor: pointer;
-  }
+}
