--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,13 +1,13 @@
-.profile__info {
-    padding-left: 30px;
-    display: grid;
-    grid-template-columns: max-content 1fr;
-    grid-template-rows: max-content 1fr;
-    grid-template-areas:
-      "title button"
-      "subtitle .";
-    align-items: center;
-    row-gap: 16px;
-    column-gap: 18px;
-    align-self: center;
+.profile__info{
+  display: grid;
+  grid-template-columns: repeat(2, minmax(min-content, max-content));
+  column-gap: 24px;
+  row-gap: 10px;
+  margin-left: 30px;
+}
+@media screen and ( max-width: 320px){
+  .profile__info{
+    column-gap: 12px;
+    row-gap: 8px;
   }
+}
