--- a/blocks/profile/__paragraph/profile__paragraph.css
+++ b/blocks/profile/__paragraph/profile__paragraph.css
@@ -1,12 +1,19 @@
-.profile__paragraph {
-    margin: 0;
-    align-self: flex-start;
-    max-width: 336px;
-    font-family: "inter", "Arial", "sans-serif";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    color: #ffffff;
-    grid-area: subtitle;
+.profile__paragraph{
+  margin: 0;
+  padding: 0;
+  max-width: 336px;
+  font-family: "Inter", "Arial", "sans-serif";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #FFFFFF; 
+}
+@media screen and (max-width:320px){
+  .profile__paragraph{
+    margin: auto;
+    max-width: 282px;
+    font-size: 14px;
+    line-height: 17px; 
   }
+}
