--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -6,7 +6,14 @@
     row-gap: 20px;
     column-gap: 17px;
   }
-@media screen and (max-width: 320px){
+  @media screen and (max-width: 990px){
+    .elements{
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      justify-items: center;
+    }
+  }
+@media screen and (max-width: 630px){
   .elements{
     align-items: center;
     display: flex;
