--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,11 +5,15 @@
   min-height: 74px;
   padding-top: 45px;
 }
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 990px) {
   .header {
     padding-left: 27px;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .header {
     padding-top: 28px;
-    max-width: 320px;
     min-height: 56px;
   }
 }
