--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -14,12 +14,16 @@
   cursor: pointer;
   opacity: 0.6;
 }
-@media screen and (max-width:320px){
+@media screen and (max-width:990px){
   .profile__add-button{
     margin: auto;
-    width: 282px;
+    width: 500px;
     margin-top: 33px;
     background-image: url(../../../Images/Profile__button_add-mobile.svg);
-    background-size: 16px;
+  }
+}
+@media screen and (max-width:630px){
+  .profile__add-button{
+    width: 282px;
   }
 }
