--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,7 +5,13 @@
   row-gap: 10px;
   margin-left: 30px;
 }
-@media screen and ( max-width: 320px){
+@media screen and ( max-width: 990px){
+  .profile__info{
+    column-gap: 20px;
+    row-gap: 10px;
+  }
+}
+@media screen and ( max-width: 630px){
   .profile__info{
     column-gap: 12px;
     row-gap: 8px;
