--- a/blocks/profile/__paragraph/profile__paragraph.css
+++ b/blocks/profile/__paragraph/profile__paragraph.css
@@ -9,9 +9,13 @@
   line-height: 22px;
   color: #FFFFFF; 
 }
-@media screen and (max-width:320px){
+@media screen and (max-width:990px){
   .profile__paragraph{
     margin: auto;
+  }
+}
+@media screen and (max-width:630px){
+  .profile__paragraph{
     max-width: 282px;
     font-size: 14px;
     line-height: 17px; 
