--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -9,9 +9,13 @@
   line-height: 48px;
   color: #FFFFFF;
 }
-@media screen and (max-width: 320px){
+@media screen and (max-width: 990px){
   .profile__title{
     margin: auto;
+  }
+}
+@media screen and (max-width: 630px){
+  .profile__title{
     margin-top: 26px;
     max-width: 189px;
     font-size: 27px;
