--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@
 @import url(./blocks/element/__item/element__item.css);
 @import url(./blocks/element/__title/elemet__title.css);
 @import url(./blocks/element/__button/element__button.css);
+@import url(./blocks/element/__button/_active/element__button_active.css);
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/footer/__author/footer__author.css);
 @import url(./blocks/profile/__image/profile__image.css);
@@ -27,6 +28,3 @@
 @import url(./blocks/popup/__text-button/popup__text-button.css);
 @import url(./blocks/popup/__close-button/popup__close-button.css);
 @import url(./blocks/popup/_opened/popup_opened.css);
-.element__button_active{
-    background-image: url(./Images/element__logo_dark.svg);
-  }
