Исправлены недочеты после ревью

--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -1,15 +1,18 @@
 .element__button {
-    margin-right: 5px;
-    outline: none;
-    border: none;
-    width: 22px;
-    height: 19px;
-    align-self: center;
-    background-color: #ffffff;
-    background-image: url(../../../Images/element__logo.svg);
-    transition: opacity 100ms ease-in-out;
-  }
-  .element__button:hover {
-    opacity: 0.7;
-    cursor: pointer;
-  }
+  padding: 0;
+  margin-top: 21px;
+  margin-right: 5px;
+  outline: none;
+  border: none;
+  width: 22px;
+  height: 19px;
+  align-self: center;
+  background-color: #ffffff;
+  background-image: url(../../../images/element__logo.svg);
+  transition: opacity 100ms ease-in-out;
+}
+
+.element__button:hover {
+  opacity: 0.7;
+  cursor: pointer;
+}
