--- a/blocks/element/__item/element__item.css
+++ b/blocks/element/__item/element__item.css
@@ -1,9 +1,9 @@
 .element__item {
-    max-width: 246px;
-    /* display: flex;
+  max-width: 246px;
+  /* display: flex;
       justify-content: space-between; */
-    display: grid;
-    grid-template-columns: 219px 22px;
-    margin-left: 21px;
-    margin-right: 15px;
-  }
+  display: grid;
+  grid-template-columns: 219px 22px;
+  padding-left: 21px;
+  padding-right: 15px;
+}
