--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -1,17 +1,20 @@
 .footer__author {
-    font-family: "inter", "Arial", "sans-serif";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    color: #545454;
-    max-width: 318px;
+  margin: 0;
+  padding-top: 20px;
+  font-family: "inter", "Arial", "sans-serif";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #545454;
+  max-width: 318px;
+}
+
+@media screen and (max-width: 630px) {
+  .footer__author {
+    max-width: 282px;
+    margin: auto;
+    font-size: 14px;
+    line-height: 17px;
   }
-  @media screen and (max-width:630px){
-    .footer__author{
-      max-width: 282px;
-      margin: auto;
-      font-size: 14px;
-      line-height: 17px;
-    }
-  }
+}
