--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,17 +1,18 @@
-.popup__container{
-    margin: 0 auto;
-    position: relative;
-    width: 430px;
-    min-height: 330px;
-    display: flex;
-    flex-direction: column;
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+.popup__container {
+  margin: 0 auto;
+  position: relative;
+  max-width: 430px;
+  min-height: 330px;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (max-width: 630px) {
+  .popup__container {
+    width: 282px;
+    min-height: 322px;
   }
-  @media screen and (max-width: 630px){
-    .popup__container{
-      width: 282px;
-      min-height: 322px;
-    }
-  }
+}
