--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -1,23 +1,27 @@
-.popup__submit-button{
-    margin: auto;
-    width: 358px;
-    height: 50px;
-    background-color: #000000;
+.popup__submit-button {
+  margin: auto;
+  margin-left: 36px;
+  margin-right: 36px;
+  width: 358px;
+  min-height: 50px;
+  background-color: #000000;
+  margin-top: 45px;
+  outline: none;
+  border: none;
+  border-radius: 2px;
+  transition: opacity 100ms ease-in-out;
+}
+
+.popup__submit-button:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 630px) {
+  .popup__submit-button {
+    width: 238px;
+    height: 46px;
     margin-top: 45px;
-    outline: none;
-    border: none;
-    border-radius: 2px;
-    transition: opacity 100ms ease-in-out;
+    margin-bottom: 25px;
   }
-  .popup__submit-button:hover{
-    opacity: 0.8;
-    cursor: pointer;
-  }
-  @media screen and (max-width: 630px){
-    .popup__submit-button{
-      width:238px;
-      height: 46px;
-      margin-top: 45px;
-      margin-bottom: 25px;
-    }
-  }
+}
