--- a/blocks/popup/__text-button/popup__text-button.css
+++ b/blocks/popup/__text-button/popup__text-button.css
@@ -1,15 +1,16 @@
-.popup__text-button{
-    font-family: "inter", "Arial", "sans-serif";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    text-align: center;
-    color: #FFFFFF;
+.popup__text-button {
+  font-family: "inter", "Arial", "sans-serif";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  color: #ffffff;
+}
+
+@media screen and (max-width: 630px) {
+  .popup__text-button {
+    font-size: 14px;
+    line-height: 17px;
   }
-  @media screen and (max-width:630px){
-    .popup__text-button{
-      font-size: 14px;
-      line-height: 17px;
-    }
-  }
+}
