--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,4 +1,4 @@
-.profile__add-button{
+.profile__add-button {
   margin-left: auto;
   background: none;
   background-size: 22px;
@@ -7,23 +7,26 @@
   background-image: url(../../../Images/Profile__button_add.svg);
   width: 150px;
   height: 50px;
-  border: 2px solid #FFFFFF;
+  border: 2px solid #ffffff;
   transition: opacity 100ms ease-in-out;
 }
-.profile__add-button:hover{
+
+.profile__add-button:hover {
   cursor: pointer;
   opacity: 0.6;
 }
-@media screen and (max-width:990px){
-  .profile__add-button{
+
+@media screen and (max-width: 990px) {
+  .profile__add-button {
     margin: auto;
     width: 500px;
     margin-top: 33px;
     background-image: url(../../../Images/Profile__button_add-mobile.svg);
   }
 }
-@media screen and (max-width:630px){
-  .profile__add-button{
+
+@media screen and (max-width: 630px) {
+  .profile__add-button {
     width: 282px;
   }
 }
