--- a/blocks/profile/__paragraph/profile__paragraph.css
+++ b/blocks/profile/__paragraph/profile__paragraph.css
@@ -1,4 +1,4 @@
-.profile__paragraph{
+.profile__paragraph {
   margin: 0;
   padding: 0;
   max-width: 336px;
@@ -7,17 +7,19 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  color: #FFFFFF; 
+  color: #ffffff;
 }
-@media screen and (max-width:990px){
-  .profile__paragraph{
+
+@media screen and (max-width: 990px) {
+  .profile__paragraph {
     margin: auto;
   }
 }
-@media screen and (max-width:630px){
-  .profile__paragraph{
+
+@media screen and (max-width: 630px) {
+  .profile__paragraph {
     max-width: 282px;
     font-size: 14px;
-    line-height: 17px; 
+    line-height: 17px;
   }
 }
