--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,4 +1,4 @@
-.profile__title{
+.profile__title {
   margin: 0;
   padding: 0;
   max-width: 294px;
@@ -7,15 +7,17 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
-@media screen and (max-width: 990px){
-  .profile__title{
+
+@media screen and (max-width: 990px) {
+  .profile__title {
     margin: auto;
   }
 }
-@media screen and (max-width: 630px){
-  .profile__title{
+
+@media screen and (max-width: 630px) {
+  .profile__title {
     margin-top: 26px;
     max-width: 189px;
     font-size: 27px;
