--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,4 +1,7 @@
 .element {
+  display: flex;
+  flex-direction: column;
+  position: relative;
   max-width: 282px;
   min-height: 361px;
   border-radius: 10px;
