--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,10 +7,10 @@
   left: 0;
   right: 0;
   bottom: 0;
+  display: flex;
   justify-content: center;
   align-items: center;
   opacity: 0;
   visibility: hidden;
-  z-index: 10;
-  transition: visibility 0s, opacity .3s linear;
+  transition: visibility .3s, opacity .3s linear;
 }
