--- a/pages/index.css
+++ b/pages/index.css
@@ -33,3 +33,4 @@
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__paragraph/popup__paragraph.css);
+@import url(../blocks/popup/__form/popup__form.css);
