--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -1,11 +1,12 @@
 .popup__field {
+  position: relative;
   margin: auto;
   font-family: "inter", "Arial", "sans-serif";
   border: none;
   border-bottom: 1px solid #000000;
   outline: none;
   width: 358px;
-  margin-bottom: 30px;
+  margin-bottom: 0px;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -15,7 +16,7 @@
 }
 
 .popup__field:last-of-type {
-  margin-bottom: 0;
+  margin-top: 30px;
 }
 
 @media screen and (max-width: 630px) {
