--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -3,6 +3,7 @@
   width: 100%;
   min-height: 50px;
   background-color: #000000;
+  color: #fff;
   margin-top: 45px;
   outline: none;
   border: none;
