--- a/pages/index.css
+++ b/pages/index.css
@@ -34,44 +34,9 @@
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__paragraph/popup__paragraph.css);
 @import url(../blocks/popup/__form/popup__form.css);
-
-.popup__overlay{
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-.popup_image-scale{
-  background: rgba(0, 0, 0, 0.9);
-}
-.popup__field-error{
-  z-index: 10;
-  position: absolute;
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 15px;
-  color: #FF0000;
-  padding-top: 5px;
-}
-.button__disabled{
-  background:none;
-  border: 1px solid #000000;
-  opacity: 0.2;
-  color: #000; 
-}
-.button__disabled:hover{
-  opacity: 0.2;
-}
-.form__input_type_error {
-  border-bottom-color: red;
-}
-.popup__field-error{
- display: none;
- color: red;
-}
-.form__input-error_active{
-  display: block;
-}
+@import url(../blocks/popup/__overlay/popup__overlay.css);
+@import url(../blocks/popup/_image-scale/popup_image-scale.css);
+@import url(../blocks/popup/__field-error/popup__field-error.css);
+@import url(../blocks/popup/__disabled/button__disabled.css);
+@import url(../blocks/popup/__input/_type_error/form__input_type_error.css);
+@import url(../blocks/popup/__input-error/_active/form__input-error_acitve.css);
