--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -19,6 +19,6 @@
 @media screen and (max-width: 630px) {
   .popup__submit-button {
     width: 100%;
-    height: 46px;
+    min-height: 46px;
   }
 }
