--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -19,7 +19,7 @@
     padding-bottom: 25px;
     padding-left: 22px;
     padding-right: 22px;
-    width: 238px;
+    max-width: 238px;
     min-height: 300px;
   }
 }
