--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -40,3 +40,23 @@
 @import url(../blocks/popup/__disabled/button__disabled.css);
 @import url(../blocks/popup/__input/_type_error/form__input_type_error.css);
 @import url(../blocks/popup/__input-error/_active/form__input-error_acitve.css);
+@import url(../blocks/element/__likes/element__likes.css);
+.popup__container_confirm{
+  width: 430px;
+  min-height: 118px;
+}
+.popup__button-confirm{
+  margin-top: 0;
+  margin-bottom: 36px;
+}
+@media screen and (max-width: 630px){
+  .popup__button-confirm{
+    margin-top: 0;
+    margin-bottom: 0px;
+  }
+}
+@media screen and (max-width: 630px){
+  .popup__title-confirm{
+    margin-bottom: 25px;
+  }
+}
