--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -18,6 +18,7 @@
 @import url(../blocks/element/__button/_active/element__button_active.css);
 @import url(../blocks/element/__trash-button/element__trash-button.css);
 @import url(../blocks/element/__img/element__img.css);
+@import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__author/footer__author.css);
 @import url(../blocks/profile/__image/profile__image.css);
