--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -41,3 +41,11 @@
 @import url(../blocks/popup/__disabled/button__disabled.css);
 @import url(../blocks/popup/__input/_type_error/form__input_type_error.css);
 @import url(../blocks/popup/__input-error/_active/form__input-error_acitve.css);
+
+.popup__container-confirm{
+  width: 430px;
+  min-height: 181px;
+}
+.popup__submit-confirm{
+  margin-top: 0;
+}
