Готова функция смена аватара

--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -3,7 +3,13 @@
   height: 120px;
   grid-column: 1;
   grid-row: 1;
+  object-fit: cover;
+  border-radius: 100px;
 }
+/* .profile__image:hover{
+  transition: opacity 200ms ease-in-out;
+  opacity: 0.5;
+} */
 
 @media screen and (max-width: 990px) {
   .profile__image {
