--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -10,6 +10,7 @@
 @import url(../blocks/profile/__paragraph/profile__paragraph.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__image-container/profile__image-container.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__item/element__item.css);
@@ -41,43 +42,8 @@
 @import url(../blocks/popup/__disabled/button__disabled.css);
 @import url(../blocks/popup/__input/_type_error/form__input_type_error.css);
 @import url(../blocks/popup/__input-error/_active/form__input-error_acitve.css);
-
-.popup__container-confirm {
-  width: 430px;
-  min-height: 181px;
-}
-.popup__submit-confirm {
-  margin-top: 0;
-}
-.popup__container-change-avatar {
-  max-width: 430px;
-  min-height: 181px;
-}
-.popup__submit-change-avatar {
-  margin-bottom: 36px;
-}
-.popup__field_change-avatar:last-of-type {
-  margin: 0 auto;
-  margin-top: 0;
-}
-.profile__image-container{
-  position: relative;
-  width: 120px;
-  height: 120px;
-  border-radius: 100%;
-}
-.profile__image-container::before{
-  position: absolute;
-  content: "";
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  opacity: 0;
-  cursor: pointer;
-  transition: opacity 0.2s ease-in-out;
-  background:rgba(0, 0, 0, 0.8) url(../images/changeAvatarIco.svg) no-repeat center;
-}
-.profile__image-container:hover:before{
-  opacity: 1;
-}
+@import url(../blocks/popup/__container/_confirm/popup__container_confirm.css);
+@import url(../blocks/popup/__submit-button/_confirm/popup__sumbit-button_confirm.css);
+@import url(../blocks/popup/__container/_change-avatar/popup__container_change-avatar.css);
+@import url(../blocks/popup/__submit-button/_change-avatar/popup__submit-button_change-avatar.css);
+@import url(../blocks/popup/__field/_change-avatar/popup__field_change-avatar.css);
