--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@
 .footer{align-self:flex-end;display:flex;flex-direction:column;justify-content:flex-end;min-height:90px;padding-bottom:60px}@media screen and (max-width:990px){.footer{margin:auto;max-width:740px}}@media screen and (max-width:768px){.footer{max-width:670px}}@media screen and (max-width:630px){.footer{max-width:282px;min-height:65px;padding-bottom:36px}}
 .footer__author{color:#545454;font-family:inter,Arial,"sans-serif";font-size:18px;font-style:normal;font-weight:400;line-height:22px;margin:0;max-width:318px}@media screen and (max-width:630px){.footer__author{font-size:14px;line-height:17px}}
 .profile__image{border-radius:100px;grid-column:1;grid-row:1;height:120px;-o-object-fit:cover;object-fit:cover;width:120px}@media screen and (max-width:990px){.profile__image{margin:0 auto}}
-.popup{align-items:center;background:rgba(0,0,0,.5);bottom:0;display:flex;font-family:inter,Arial,"sans-serif";justify-content:center;left:0;opacity:.5;position:fixed;right:0;top:0;transition:visibility .3s,opacity .3s linear;visibility:hidden;z-index:100}
+.popup{align-items:center;background:rgba(0,0,0,.5);bottom:0;display:flex;font-family:inter,Arial,"sans-serif";justify-content:center;left:0;opacity:0;position:fixed;right:0;top:0;transition:visibility .3s,opacity .3s linear;visibility:hidden;z-index:100}
 .popup__container{background-color:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);display:flex;flex-direction:column;margin:0 auto;max-width:430px;min-height:330px;padding:1px 36px;position:relative}@media screen and (max-width:630px){.popup__container{max-width:238px;min-height:300px;padding-bottom:25px;padding-left:22px;padding-right:22px}}
 .popup__container_image{background:none;max-height:75vh;max-width:75vw;padding:0}
 .popup__content{display:flex;flex-direction:column}
@@ -32,7 +32,7 @@
 .popup__submit-button{background-color:#000;border:none;border-radius:2px;color:#fff;margin:45px auto auto;min-height:50px;outline:none;transition:opacity .2s ease-in-out;width:100%}.popup__submit-button:hover{cursor:pointer;opacity:.8}@media screen and (max-width:630px){.popup__submit-button{min-height:46px;width:100%}}
 .popup__text-button{font-family:inter,Arial,"sans-serif";font-size:18px;font-style:normal;font-weight:400;line-height:22px;text-align:center}@media screen and (max-width:630px){.popup__text-button{font-size:14px;line-height:17px}}
 .popup__close-button{background:none;border:none;cursor:pointer;height:32px;position:absolute;right:-36px;top:-37px;transition:opacity .1s ease-in-out;width:32px}.popup__close-button:before{transform:rotate(45deg)}.popup__close-button:after,.popup__close-button:before{border:2px solid #fff;content:"";height:35px;position:absolute;right:11px;top:-5px}.popup__close-button:after{transform:rotate(-45deg)}.popup__close-button:hover{opacity:.6}@media screen and (max-width:630px){.popup__close-button{height:20px;right:1px;top:-47.8px;width:20px}.popup__close-button:after,.popup__close-button:before{border:1.5px solid #fff;height:20px}}
-.popup_opened{display:flex;opacity:1;visibility:visible}
+.popup_opened{opacity:1;visibility:visible}
 .popup__image{max-height:75vh;max-width:75vw}
 .popup__paragraph{color:#fff;font-family:Inter;font-size:12px;font-style:normal;font-weight:400;line-height:15px;margin-top:10px}
 .popup__form{margin:0;max-width:360px;padding:0}
